--- a/styles/background.scss
+++ b/styles/background.scss
@@ -22,8 +22,9 @@ $olimpus : "../assets/bg.png";
     background-size: 100% auto; // Esto asegura que la imagen se ajuste completamente sin ser recortada
     width: 100%;
     height: 100vh;
-
-    display: grid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
   }
 
