--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,9 @@
     background-size: 100% auto;
     width: 100%;
     height: 100vh;
-    display: grid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 @media (max-width: 768px) {
@@ -37,6 +39,26 @@
 }
 
 .bg {
+  width: 100%;
+}
+
+.students {
+  display: grid;
+  place-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  gap: 1rem;
+  grid-template-columns: 10% 10% 10% 10% 10%;
+  grid-template-rows: 15% 15% 15% 15%;
+}
+.students div {
+  display: flex;
+  padding: 1rem;
+  border-radius: 1rem;
+  background: blanchedalmond;
+}
+.students div img {
   width: 100%;
 }
 
