--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,12 +1,35 @@
 @import "background";
-*{
+
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
-.bg{
+
+.bg {
   width: 100%;
 
 }
-#main{
+
+
+.students {
+  display: grid;
+  place-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  gap: 1rem;
+  grid-template-columns: 10% 10% 10% 10% 10%;
+  grid-template-rows: 15% 15% 15% 15%;
+
+  div {
+    display: flex;
+    padding: 1rem;
+    border-radius: 1rem;
+    background:  blanchedalmond;
+
+    img {
+      width: 100%;
+    }
+  }
 }
