--- a/styles/background.scss
+++ b/styles/background.scss
@@ -13,7 +13,6 @@ $olimpus : "../assets/bg.png";
   html, body, #main {
     margin: 0;
     padding: 0;
-    height: 100%;
     overflow: hidden; // Esto previene el desplazamiento
   }
 
@@ -25,6 +24,10 @@ $olimpus : "../assets/bg.png";
     display: flex;
     align-items: center;
     justify-content: center;
+    .students{
+      height: 60dvh;
+      width: 70%;
+    }
 
   }
 
