--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,19 +14,19 @@
 
 .students {
   display: grid;
-  place-content: center;
-  align-items: center;
+  //place-content: center;
+  justify-items: center;
   width: 100%;
   height: auto;
-  gap: 1rem;
-  grid-template-columns: 10% 10% 10% 10% 10%;
-  grid-template-rows: 15% 15% 15% 15%;
+  gap: 2rem;
+  grid-template-columns: auto auto auto auto auto auto;
+grid-template-rows: auto auto auto auto auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   div {
     display: flex;
-    padding: 1rem;
     border-radius: 1rem;
-    background:  blanchedalmond;
 
     img {
       width: 100%;
