--- a/styles/background.scss
+++ b/styles/background.scss
@@ -22,6 +22,8 @@ $olimpus : "../assets/bg.png";
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-flow: column;
+    gap: 3rem;
     align-items: center;
     justify-content: center;
     .students{
