--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,8 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-flow: column;
+    gap: 3rem;
     align-items: center;
     justify-content: center;
   }
@@ -46,22 +48,33 @@
 }
 
 .students {
-  display: grid;
-  justify-items: center;
-  width: 100%;
-  height: auto;
-  gap: 2rem;
-  grid-template-columns: auto auto auto auto auto auto;
-  grid-template-rows: auto auto auto auto auto;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  height: 70vh;
 }
-.students div {
+
+.teachers {
+  height: 60vh;
+}
+
+.students, .teachers {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+  overflow: hidden;
+}
+.students div, .teachers div {
   display: flex;
   border-radius: 1rem;
+  width: 100px;
+  height: auto;
+  z-index: 1;
 }
-.students div img {
+.students div img.crown, .teachers div img.crown {
   width: 100%;
+  z-index: 100;
+}
+.students div img.gif, .teachers div img.gif {
+  width: 100%;
+  z-index: 10;
 }
 
 /*# sourceMappingURL=style.css.map */
