--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,26 +10,35 @@
   width: 100%;
 
 }
+.students{
+  height: 70vh;
+}
+.teachers{
+  height: 60vh;
+}
 
-
-.students {
-  display: grid;
-  //place-content: center;
-  justify-items: center;
-  width: 100%;
-  height: auto;
-  gap: 2rem;
-  grid-template-columns: auto auto auto auto auto auto;
-grid-template-rows: auto auto auto auto auto;
-  overflow-y: scroll;
-  overflow-x: hidden;
+.students, .teachers {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+  overflow: hidden;
 
   div {
     display: flex;
     border-radius: 1rem;
+    width: 100px;
+    height: auto;
+    z-index: 1;
 
-    img {
+    img.crown{
       width: 100%;
+      z-index: 100;
     }
+    img.gif{
+      width: 100%;
+      z-index: 10;
+    }
+
+
   }
 }
