--- a/styles/style.css
+++ b/styles/style.css
@@ -48,33 +48,50 @@
 }
 
 .students {
-  height: 70vh;
+  height: 75vh;
 }
 
 .teachers {
-  height: 60vh;
+  height: 25vh;
 }
 
 .students, .teachers {
   display: flex;
+  gap: 1rem;
   flex-flow: wrap row;
   justify-content: center;
   overflow: hidden;
 }
 .students div, .teachers div {
   display: flex;
-  border-radius: 1rem;
-  width: 100px;
+  flex-direction: column;
+  width: 150px;
   height: auto;
+  gap: 0.5rem;
+  align-items: center;
+}
+.students div div, .teachers div div {
+  border-radius: 1rem;
+  height: 90%;
   z-index: 1;
+  position: relative;
 }
-.students div img.crown, .teachers div img.crown {
-  width: 100%;
+.students div div img, .teachers div div img {
+  position: absolute;
+  height: 100%;
+  max-width: 250px;
+  max-height: 250px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.students div div img.crown, .teachers div div img.crown {
   z-index: 100;
+  max-width: 100%;
 }
-.students div img.gif, .teachers div img.gif {
-  width: 100%;
+.students div div img.gif, .teachers div div img.gif {
   z-index: 10;
+  max-width: 75%;
 }
 
 /*# sourceMappingURL=style.css.map */
