--- a/styles/background.scss
+++ b/styles/background.scss
@@ -13,7 +13,7 @@ $olimpus : "../assets/bg.png";
   html, body, #main {
     margin: 0;
     padding: 0;
-    overflow: hidden; // Esto previene el desplazamiento
+    // Esto previene el desplazamiento
   }
 
   #main {
@@ -26,6 +26,7 @@ $olimpus : "../assets/bg.png";
     gap: 3rem;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
     .students{
       height: 60dvh;
       width: 70%;
