--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,16 @@
 @import "background";
+@import "mixins";
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+header {
+  width: 100%;
+  height: 100dvh;
+  background: black;
 }
 
 .bg {
@@ -12,15 +19,16 @@
 }
 
 .students {
-  height: 75vh;
+  height: 80vh;
 }
 
 .teachers {
-  height: 25vh;
+  min-height: 20vh;
 }
 
 .students, .teachers {
   display: flex;
+  width: 100%;
   gap: 1rem;
   flex-flow: wrap row;
   justify-content: center;
@@ -28,21 +36,27 @@
 
   div {
     display: flex;
-    flex-direction: column;width: 150px;
+    flex-direction: column;
+    width: 150px;
+    min-height: 10vh;
     height: auto;
     gap: 0.5rem;
     align-items: center;
+    transition: width 1000ms;
+
     div {
       border-radius: 1rem;
       height: 90%;
+      min-width: 100%;
+
       z-index: 1;
       position: relative;
 
       img {
         position: absolute;
         height: 100%;
-        max-width: 250px;
-        max-height: 250px;
+        max-width: 300px;
+        max-height: 300px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -60,4 +74,11 @@
 
     }
   }
+
+}
+.students > div:hover {
+  @include addHover;
+}
+.teachers > div:hover {
+  @include addHover;
 }
