--- a/styles/background.css
+++ b/styles/background.css
@@ -1,3 +1,33 @@
+/*
 
+@mixin bgImg{
+  min-width: 100vw;
+  width: 100%;
+  min-height: 80vh;
+  background-image: url($olimpus);
+  background-repeat:no-repeat ;
+  background-size: cover;
+}*/
+html,
+body,
+#main {
+  margin: 0;
+  padding: 0;
+}
 
-/*# sourceMappingURL=background.css.map */
+#main {
+  background: url("../assets/bg.png") repeat-x bottom center fixed;
+  background-size: 100% auto;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  gap: 3rem;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+}
+#main .students {
+  height: 60dvh;
+  width: 70%;
+}/*# sourceMappingURL=background.css.map */
