--- a/styles/background.scss
+++ b/styles/background.scss
@@ -1,4 +1,5 @@
-$olimpus : "../assets/bg.png";
+$olimpus: "../assets/bg.png";
+$cyberOlimpus: "../assets/header-b.webp";
 /*
 
 @mixin bgImg{
@@ -9,40 +10,27 @@ $olimpus : "../assets/bg.png";
   background-repeat:no-repeat ;
   background-size: cover;
 }*/
-@media (min-width: 768px){
-  html, body, #main {
-    margin: 0;
-    padding: 0;
-    // Esto previene el desplazamiento
-  }
-
-  #main {
-    background: url($olimpus) repeat-x bottom center  fixed;
-    background-size: 100% auto; // Esto asegura que la imagen se ajuste completamente sin ser recortada
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-flow: column;
-    gap: 3rem;
-    align-items: center;
-    justify-content: center;
-    overflow-x: hidden;
-    .students{
-      height: 60dvh;
-      width: 70%;
-    }
-
-  }
-
-  body{
-  }
-}
-@media (max-width: 768px) {
-  #main{
-    background: blue;
-    height: 100vh;
-    width: 100%;
-  }
+html,
+body,
+#main {
+  margin: 0;
+  padding: 0;
+  // Esto previene el desplazamiento
 }
 
-
+#main {
+  background: url($olimpus) repeat-x bottom center fixed;
+  background-size: 100% auto; // Esto asegura que la imagen se ajuste completamente sin ser recortada
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  gap: 3rem;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+  .students {
+    height: 60dvh;
+    width: 70%;
+  }
+}
