--- a/styles/style.css
+++ b/styles/style.css
@@ -8,47 +8,59 @@
   background-repeat:no-repeat ;
   background-size: cover;
 }*/
-@media (min-width: 768px) {
-  html,
-  body,
-  #main {
-    margin: 0;
-    padding: 0;
-  }
-  #main {
-    background: url("../assets/bg.png") repeat-x bottom center fixed;
-    background-size: 100% auto;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-flow: column;
-    gap: 3rem;
-    align-items: center;
-    justify-content: center;
-    overflow-x: hidden;
-  }
-  #main .students {
-    height: 60dvh;
-    width: 70%;
-  }
+html,
+body,
+#main {
+  margin: 0;
+  padding: 0;
 }
-@media (max-width: 768px) {
-  #main {
-    background: blue;
-    height: 100vh;
-    width: 100%;
-  }
+
+#main {
+  background: url("../assets/bg.png") repeat-x bottom center fixed;
+  background-size: 100% auto;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  gap: 3rem;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
 }
+#main .students {
+  height: 60dvh;
+  width: 70%;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+#headerText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+
 header {
+  background-image: url("../assets/header-bg.webp");
   width: 100%;
   height: 100dvh;
-  background: black;
+  z-index: 1;
+  background-size: 100% auto;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  gap: 3rem;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+  filter: blur(10px);
 }
 
 .bg {
@@ -77,7 +89,7 @@ header {
   display: flex;
   flex-direction: column;
   width: 150px;
-  min-height: 10vh;
+  min-height: 50px;
   height: auto;
   gap: 0.5rem;
   align-items: center;
@@ -105,6 +117,7 @@ header {
 .teachers div div img.crown {
   z-index: 100;
   max-width: 100%;
+  bottom: 0;
 }
 .students div div img.gif,
 .teachers div div img.gif {
@@ -128,6 +141,4 @@ header {
   transform: translate(-50%, -50%);
   height: 75vh;
   width: 75%;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
