--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,16 +6,32 @@
   padding: 0;
   margin: 0;
 }
-
+#headerText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
 header {
+  background-image: url("../assets/header-bg.webp");
   width: 100%;
   height: 100dvh;
-  background: black;
+  z-index: 1;
+  background-size: 100% auto; // Esto asegura que la imagen se ajuste completamente sin ser recortada
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  gap: 3rem;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+  filter: blur(10px);
 }
 
 .bg {
   width: 100%;
-
 }
 
 .students {
@@ -26,7 +42,8 @@ header {
   min-height: 20vh;
 }
 
-.students, .teachers {
+.students,
+.teachers {
   display: flex;
   width: 100%;
   gap: 1rem;
@@ -38,7 +55,7 @@ header {
     display: flex;
     flex-direction: column;
     width: 150px;
-    min-height: 10vh;
+    min-height: 50px;
     height: auto;
     gap: 0.5rem;
     align-items: center;
@@ -65,16 +82,15 @@ header {
       img.crown {
         z-index: 100;
         max-width: 100%;
+        bottom: 0;
       }
 
       img.gif {
         z-index: 10;
         max-width: 75%;
       }
-
     }
   }
-
 }
 .students > div:hover {
   @include addHover;
