--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body,
 }
 
 #main {
+  position: relative;
   background: url("../assets/bg.png") repeat-x bottom center fixed;
   background-size: 100% auto;
   width: 100%;
@@ -36,6 +37,7 @@ body,
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 #headerText {
@@ -52,8 +54,6 @@ header {
   height: 100dvh;
   z-index: 1;
   background-size: 100% auto;
-  width: 100%;
-  height: 100vh;
   display: flex;
   flex-flow: column;
   gap: 3rem;
@@ -99,7 +99,7 @@ header {
 .teachers div div {
   border-radius: 1rem;
   height: 90%;
-  min-width: 100%;
+  width: 100%;
   z-index: 1;
   position: relative;
 }
@@ -124,21 +124,96 @@ header {
   z-index: 10;
   max-width: 75%;
 }
-
-.students > div:hover {
+span{
+  text-align: center;
+  margin: 1rem;
+}
+.students > div:hover > div:not(:hover) {
   position: absolute;
-  top: 50%;
+  top: 45%;
+  bottom: 50%;
+  right: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  height: 75vh;
-  width: 75%;
+  transform: translate(-50%, -50%) ;
+  height: 40vh;
+  max-width: 40vh;
+  z-index: 100000;
+  border-radius: 50%;
+  padding: 15rem;
+  border-width: 3rem;
+  backdrop-filter: blur(20px);
+}
+.students > div:hover > span{
+  position: absolute;
+  bottom: 20vh;
+  right: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) ;
+  height: 10vh;
+  width: 200px;
+  z-index: 1000000;
+  font-size: 1.5rem;
+}
+.students > div > div:hover{
+  position: absolute;
+  top: 45%;
+  bottom: 50%;
+  right: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) ;
+  height: 40vh;
+  max-width: 40vh;
+  z-index: 100000;
+  border-radius: 50%;
+  padding: 15rem;
+  border-width: 3rem;
+  backdrop-filter: blur(20px);
+  transition-delay: 50000ms;
 }
 
-.teachers > div:hover {
+.students > div > div{
+  transition: width 5000ms;
+}
+.teachers > div:hover > div:not(:hover) {
   position: absolute;
-  top: 50%;
+  top: 45%;
+  bottom: 50%;
+  right: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  height: 75vh;
-  width: 75%;
-}/*# sourceMappingURL=style.css.map */
+  transform: translate(-50%, -50%) ;
+  height: 40vh;
+  max-width: 40vh;
+  z-index: 100000;
+  border-radius: 50%;
+  padding: 15rem;
+  border-width: 3rem;
+  backdrop-filter: blur(20px);
+}
+.teachers > div:hover > span{
+  position: absolute;
+  bottom: 25vh;
+  right: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) ;
+  height: 10vh;
+  width: 200px;
+  z-index: 1000000;
+  font-size: 1.5rem;
+}
+.teachers > div > div:hover{
+  position: absolute;
+  top: 45%;
+  bottom: 50%;
+  right: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) ;
+  height: 40vh;
+  max-width: 40vh;
+  z-index: 100000;
+  border-radius: 50%;
+  padding: 15rem;
+  border-width: 3rem;
+  backdrop-filter: blur(20px);
+  transition-delay: 50000ms;
+}
+/*# sourceMappingURL=style.css.map */
