--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,10 +1,11 @@
 @import "background";
-@import "mixins";
+
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 #headerText {
   position: absolute;
@@ -15,8 +16,6 @@
 }
 header {
   background-image: url("../assets/header-bg.webp");
-  width: 100%;
-  height: 100dvh;
   z-index: 1;
   background-size: 100% auto; // Esto asegura que la imagen se ajuste completamente sin ser recortada
   width: 100%;
@@ -90,11 +89,15 @@ header {
         max-width: 75%;
       }
     }
+
   }
+  .students > div:hover{
+    div{
+
+      width: 100vw;
+      height: 100vh;
+    }
+  }
+
 }
-.students > div:hover {
-  @include addHover;
-}
-.teachers > div:hover {
-  @include addHover;
-}
+
