--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 
 @mixin bgImg{
@@ -16,7 +17,6 @@ body,
 }
 
 #main {
-  position: relative;
   background: url("../assets/bg.png") repeat-x bottom center fixed;
   background-size: 100% auto;
   width: 100%;
@@ -37,7 +37,8 @@ body,
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  overflow: hidden;
+  font-family: "Roboto", sans-serif;
 }
 
 #headerText {
@@ -47,13 +48,22 @@ body,
   transform: translate(-50%, -50%);
   z-index: 100;
 }
+#headerText a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#headerText img {
+  max-width: 4rem;
+  max-height: 4rem;
+}
 
 header {
   background-image: url("../assets/header-bg.webp");
-  width: 100%;
-  height: 100dvh;
   z-index: 1;
   background-size: 100% auto;
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-flow: column;
   gap: 3rem;
@@ -61,6 +71,14 @@ header {
   justify-content: center;
   overflow-x: hidden;
   filter: blur(10px);
+}
+
+body {
+  overflow-y: scroll;
+}
+
+#main {
+  position: relative;
 }
 
 .bg {
@@ -75,6 +93,20 @@ header {
   min-height: 20vh;
 }
 
+span {
+  text-align: center;
+}
+
+.students, .teachers > * {
+  overflow: hidden;
+}
+
+main a img {
+  width: 4rem;
+  height: 4rem;
+  transform: rotate(180deg);
+}
+
 .students,
 .teachers {
   display: flex;
@@ -83,6 +115,52 @@ header {
   flex-flow: wrap row;
   justify-content: center;
   overflow: hidden;
+}
+.students div:hover div:not(hover),
+.teachers div:hover div:not(hover) {
+  position: absolute;
+  bottom: 50%;
+  right: 50%;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  height: 40vh;
+  max-width: 40vh;
+  z-index: 100000;
+  border-radius: 50%;
+  padding: 15rem;
+  border-width: 3rem;
+  backdrop-filter: blur(20px);
+  animation-name: desvanecer;
+  animation-duration: 1.5s; /* Duración de la animación */
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); /* Curva de Bezier */
+}
+@keyframes desvanecer {
+  0% {
+    opacity: 0;
+  }
+  /* Comienza con opacidad 0 */
+  25% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+  /* Termina con opacidad 1 */
+}
+.students div:hover span,
+.teachers div:hover span {
+  position: absolute;
+  bottom: 20vh;
+  right: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 10vh;
+  width: 200px;
+  z-index: 1000000;
+  font-size: 1.5rem;
+  transition-delay: 5000ms;
+  transition: 500ms;
 }
 .students div,
 .teachers div {
@@ -93,13 +171,12 @@ header {
   height: auto;
   gap: 0.5rem;
   align-items: center;
-  transition: width 1000ms;
 }
 .students div div,
 .teachers div div {
   border-radius: 1rem;
   height: 90%;
-  width: 100%;
+  max-width: 40vh;
   z-index: 1;
   position: relative;
 }
@@ -124,96 +201,5 @@ header {
   z-index: 10;
   max-width: 75%;
 }
-span{
-  text-align: center;
-  margin: 1rem;
-}
-.students > div:hover > div:not(:hover) {
-  position: absolute;
-  top: 45%;
-  bottom: 50%;
-  right: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) ;
-  height: 40vh;
-  max-width: 40vh;
-  z-index: 100000;
-  border-radius: 50%;
-  padding: 15rem;
-  border-width: 3rem;
-  backdrop-filter: blur(20px);
-}
-.students > div:hover > span{
-  position: absolute;
-  bottom: 20vh;
-  right: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) ;
-  height: 10vh;
-  width: 200px;
-  z-index: 1000000;
-  font-size: 1.5rem;
-}
-.students > div > div:hover{
-  position: absolute;
-  top: 45%;
-  bottom: 50%;
-  right: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) ;
-  height: 40vh;
-  max-width: 40vh;
-  z-index: 100000;
-  border-radius: 50%;
-  padding: 15rem;
-  border-width: 3rem;
-  backdrop-filter: blur(20px);
-  transition-delay: 50000ms;
-}
 
-.students > div > div{
-  transition: width 5000ms;
-}
-.teachers > div:hover > div:not(:hover) {
-  position: absolute;
-  top: 45%;
-  bottom: 50%;
-  right: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) ;
-  height: 40vh;
-  max-width: 40vh;
-  z-index: 100000;
-  border-radius: 50%;
-  padding: 15rem;
-  border-width: 3rem;
-  backdrop-filter: blur(20px);
-}
-.teachers > div:hover > span{
-  position: absolute;
-  bottom: 25vh;
-  right: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) ;
-  height: 10vh;
-  width: 200px;
-  z-index: 1000000;
-  font-size: 1.5rem;
-}
-.teachers > div > div:hover{
-  position: absolute;
-  top: 45%;
-  bottom: 50%;
-  right: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) ;
-  height: 40vh;
-  max-width: 40vh;
-  z-index: 100000;
-  border-radius: 50%;
-  padding: 15rem;
-  border-width: 3rem;
-  backdrop-filter: blur(20px);
-  transition-delay: 50000ms;
-}
 /*# sourceMappingURL=style.css.map */
