--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,16 +5,31 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow: hidden;
   font-family: 'Roboto', sans-serif;
 }
+
 #headerText {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 100;
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  img {
+    max-width: 4rem;
+    max-height: 4rem;
+  }
 }
+
 header {
+
   background-image: url("../assets/header-bg.webp");
   z-index: 1;
   background-size: 100% auto; // Esto asegura que la imagen se ajuste completamente sin ser recortada
@@ -29,6 +44,14 @@ header {
   filter: blur(10px);
 }
 
+body {
+  overflow-y: scroll;
+}
+
+#main {
+  position: relative;
+}
+
 .bg {
   width: 100%;
 }
@@ -41,6 +64,25 @@ header {
   min-height: 20vh;
 }
 
+span {
+  text-align: center;
+
+}
+
+.students, .teachers > * {
+  overflow: hidden;
+}
+
+main {
+  a {
+    img {
+      width: 4rem;
+      height: 4rem;
+      transform: rotate(180deg);
+    }
+  }
+}
+
 .students,
 .teachers {
   display: flex;
@@ -50,6 +92,55 @@ header {
   justify-content: center;
   overflow: hidden;
 
+  div:hover div:not(hover) {
+    position: absolute;
+    bottom: 50%;
+    right: 50%;
+    left: 50%;
+    top: 45%;
+    transform: translate(-50%, -50%);
+    height: 40vh;
+    max-width: 40vh;
+    z-index: 100000;
+    border-radius: 50%;
+    padding: 15rem;
+    border-width: 3rem;
+    backdrop-filter: blur(20px);
+
+    animation-name: desvanecer;
+    animation-duration: 1.5s; /* Duración de la animación */
+    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); /* Curva de Bezier */
+
+  }
+
+  @keyframes desvanecer {
+    0% {
+      opacity: 0;
+    }
+    /* Comienza con opacidad 0 */
+    25% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+    /* Termina con opacidad 1 */
+  }
+
+  div:hover span {
+    position: absolute;
+    bottom: 20vh;
+    right: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 10vh;
+    width: 200px;
+    z-index: 1000000;
+    font-size: 1.5rem;
+    transition-delay: 5000ms;
+    transition: 500ms;
+  }
+
   div {
     display: flex;
     flex-direction: column;
@@ -58,12 +149,12 @@ header {
     height: auto;
     gap: 0.5rem;
     align-items: center;
-    transition: width 1000ms;
 
     div {
       border-radius: 1rem;
       height: 90%;
-      min-width: 100%;
+
+      max-width: 40vh;
 
       z-index: 1;
       position: relative;
@@ -91,13 +182,7 @@ header {
     }
 
   }
-  .students > div:hover{
-    div{
-
-      width: 100vw;
-      height: 100vh;
-    }
-  }
-
 }
+
+
 
